# LuoguDesktop

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LuoguDesktop.pro  Makefile  README.md  assets.qrc  cmake_install.cmake  com.github.zsd2024.LuoguDesktop.desktop  gen_i18n.sh  make_pyi.py  make_pyi.pyi
.github/workflows/: Delete old workflow runs.yml  android.yml  build-linux.yaml  build-macos.yaml  build-windows.yaml  ios.yml  macos.yml  ubuntu.yml  windows-mingw.yml  windows.yml
LuoguDesktop/UI/: LoginWindow.py  MainWindow.py  MainWindow.pyi
Poco/lib64/: CppUnit.exp  CppUnit.lib  PocoActiveRecord.exp  PocoActiveRecord.lib  PocoCrypto.exp  PocoCrypto.lib  PocoData.exp  PocoData.lib  PocoDataODBC.exp  PocoDataODBC.lib  PocoDataSQLite.exp  PocoDataSQLite.lib  PocoDataTest.exp  PocoDataTest.lib  PocoEncodings.exp  PocoEncodings.lib  PocoFoundation.exp  PocoFoundation.lib  PocoJSON.exp  PocoJSON.lib  PocoJWT.exp  PocoJWT.lib  PocoMongoDB.exp  PocoMongoDB.lib  PocoNet.exp  PocoNet.lib  PocoNetSSL.exp  PocoNetSSL.lib  PocoPrometheus.exp  PocoPrometheus.lib  PocoRedis.exp  PocoRedis.lib  PocoUtil.exp  PocoUtil.lib  PocoXML.exp  PocoXML.lib  PocoZip.exp  PocoZip.lib
UI/: LoginWindow.py  LoginWindow.pyi  MainWindow.py
assets/: LatexToSvg.html  MarkdownWithLatexBaseHTML.html
assets/translations/: en_US.qm  zh_CN.qm
lib/: get_image.py  user.py  user.pyi
scripts/: windows-publish.ps1
src/: .clangd  CMakeLists.txt  LuoguDesktop.cpp  LuoguDesktop.h  LuoguDesktop.ui  main.cpp  ui_LuoguDesktop.h
src/Auth/: LuoguAuth.cpp  LuoguAuth.h
src/Common/: Common.cpp  Common.h
src/Config/: Config.cpp  Config.h
src/Contest/: Contest.cpp  Contest.h
src/Discuss/: Discuss.cpp  Discuss.h  DiscussView.h
src/Error/: Error.cpp  Error.h
src/GetBackground/: GetBackground.cpp  GetBackground.h
src/Latex/: LatexToSvg.cpp  LatexToSvg.h  qwebchannel.js  webtransport.cpp  webtransport.h
src/Login/: Login.cpp  Login.h  Login.ui  LuoguLogin.cpp  LuoguLogin.h  ui_Login.h
src/LuoguWeb/: LuoguWeb.ui
src/MarkdownViewer/: MarkdownViewer.cpp  MarkdownViewer.cpp.old  MarkdownViewer.h  MarkdownViewer.h.old
src/ModelViews/: CMakeLists.txt  DailyCountWrapper.cpp  DailyCountWrapper.h  EloRecordWrapper.cpp  EloRecordWrapper.h  GuWrapper.cpp  GuWrapper.h  UserPrizeWrapper.cpp  UserPrizeWrapper.h  UserProfileWrapper.cpp  UserProfileWrapper.h  UserWrapper.cpp  UserWrapper.h
src/Models/: CMakeLists.txt  User.cpp  User.h
src/Network/: CMakeLists.txt  CookieJar.cpp  CookieJar.h  NetworkHelper.cpp  NetworkHelper.h  NetworkManager.cpp  NetworkManager.h  NetworkRequest.cpp  NetworkRequest.h  NetworkResponse.h  RequestMethod.h
src/Repository/: AuthRepository.cpp  AuthRepository.h  CMakeLists.txt  UserRepository.cpp  UserRepository.h
src/RoundedBlurWidget/: RoundedBlurWidget.cpp  RoundedBlurWidget.h
src/RoundedWidget/: RoundedWidget.cpp  RoundedWidget.h
src/Service/: AuthService.cpp  AuthService.h  CMakeLists.txt
src/UI/: CMakeLists.txt
src/UI/qml/: LoginPage.qml  Main.qml  MainPage.qml
translations/: en_US.ts  zh_CN.ts
